# nautilus_dev

./: .coverage  .env.enc  .env.example  .env.production.example  .gitignore  .gitleaks.toml  .mcp.database.json  .mcp.gemini_deprecat.json  .mcp.json  .mcp.live.json  .mcp.monitoring.json  .mcp.plan.json  .mcp.reflect.json  .mcp.scrape.json  .pre-commit-config.yaml  .releaserc.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.malware-sandbox  Dockerfile.sandbox  README.md  catalog-info.yaml  claude.md  commitlint.config.js  docker-compose.sandbox.yml  docker-compose.staging.yml  docker-compose.testnet.yml  docker-compose.yml  evolve.db  mkdocs.yml  package.json  pyproject.toml  pytest.ini  renovate.json
.backup_agents_skills/: alpha-debug.md  tdd-guard.md
.backup_agents_skills/hooks/: alpha-debug-loop.py  alpha-evolve-complete.py  auto-alpha-debug.py  evolve-interceptor.py  subagent-stop-dispatcher.py  test_auto_alpha_debug.py
.claude/: CLAUDE.md  COMMANDS_MANIFEST.md  PROMPT.md  SKILLS_MANIFEST.md
.claude/.backup_agents/: alpha-visual.md  grafana-expert.md  grafana-visual-validator.md  nautilus-visualization-renderer.md
.claude/agents/: adaptive-control-architect.md  alpha-debug.md  alpha-evolve.md  backtest-analyzer.md  grafana-expert.md  grafana-visual-validator.md  mathematician.md  nautilus-coder.md  nautilus-data-pipeline-operator.md  nautilus-docs-specialist.md  nautilus-live-operator.md  nautilus-visualization-renderer.md  pinescript-converter.md  strategy-researcher.md  tdd-guard.md  test-runner.md
.claude/checkpoints/: enterprise_ci_checkpoint.md
.claude/commands/: optimize.md  pinescript.md  research.md  spec-pipeline.md  validate-plan.md  verify-tasks.md
.claude/context_bundles/: 01_jan_session_4e7a9fb4-df36-44cb-8a26-b666c4bdb13c.json  01_jan_session_99c59ae7-c29b-4f3b-9deb-5281ed838b56.json  01_jan_session_aff96761-7773-48f5-b39a-00e993b678fb.json  02_jan_session_011aa287-11ab-416a-a606-7dd17ea7a167.json  02_jan_session_0ae76c97-118e-43ab-83e8-53834adad67a.json  (+97 more)
.github/: CODEOWNERS  auto-assign.yml  dependabot.yml  labeler.yml
.serena/: project.yml
.specify/: slo.yaml
.staging-snapshots/: pre-deploy-20260111_194531.git
config/: .env.example  __init__.py  binance_errors.py  cache.py  canonical.yaml  data.py  execution.py  factory.py  logging_config.py  models.py  order_helpers.py  research-events.service  risk.py  streaming.py  trading_node_recovery.py
dashboard/: build.js  index.html  models.py  package-lock.json  package.json  requirements.txt  server.py
data_loaders/: __init__.py  hyperliquid_l2.py
docs/: 018-recovery-guide.md  018-redis-keys.md  018-redis-monitoring.md  019-graceful-shutdown-guide.md  027-adaptive-control-framework.md  027-architecture-validation-report.md  ARCHITECTURE.md  BRANCH_REVIEW.md  alpha-evolve-cli.md  index.md  review-checklist.md
k8s/: README.md
monitoring/: .env.example  README.md  __init__.py  client.py  config.py  constants.py  docker-compose.cadvisor.yml  docker-compose.logging.yml  docker-compose.yml  metrics_collector.py  models.py
pipeline/: README.md  __init__.py  cli.py
risk/: __init__.py  circuit_breaker.py  circuit_breaker_actor.py  circuit_breaker_config.py  circuit_breaker_state.py  config.py  correlation.py  daily_loss_config.py  daily_pnl_tracker.py  manager.py  var_calculator.py
scripts/: __init__.py  architecture_drift_detector.py  benchmark_orderflow.py  benchmark_redis.py  check_breaking_changes.py  checkpoint.sh  deploy-staging.sh  extract_formulas.py  extract_formulas.sh  health_check.sh  parse_paper.sh  parse_paper_background.sh  pinescript_extractor.py  research_events.py  research_query.py  research_rerank.py  research_versioning.py  rollback.sh  setup-discord-alerts.sh  setup_sentry_alerts.py  state_snapshot.py  sync_memory_to_neo4j.py  sync_neo4j_to_duckdb.py  sync_research.py  sync_tasks_issues.py  test_bocd_approaches.py  test_graceful_shutdown.py  test_position_persistence.py  test_recovery.py  test_redis_connection.py  validate_ofi_accuracy.py  validate_orderflow_indicators.py  validate_vpin_volatility_correlation.py  validate_vpin_volatility_extended.py  verify_spec040.py  verify_trading_flow.py
scripts/auto_update/: __init__.py  __main__.py  analyzer.py  auto_fix.py  cli.py  config.toml  dispatcher.py  git_ops.py  models.py  notifier.py  parser.py  pyproject.toml  run_update.sh  updater.py  validator.py
scripts/ccxt_pipeline/: README.md  __init__.py  __main__.py  cli.py  config.py  nautilus_bridge.py  pyproject.toml
scripts/ccxt_pipeline/benchmarks/: profile_concurrent.py
scripts/ccxt_pipeline/fetchers/: __init__.py  base.py  binance.py  bybit.py  hyperliquid.py  orchestrator.py
scripts/ccxt_pipeline/models/: __init__.py  funding_rate.py  liquidation.py  open_interest.py
scripts/ccxt_pipeline/scheduler/: __init__.py  daemon.py
scripts/ccxt_pipeline/storage/: __init__.py  parquet_store.py
scripts/ccxt_pipeline/streams/: __init__.py  liquidations.py
scripts/ccxt_pipeline/utils/: __init__.py  circuit_breaker.py  logging.py  parsing.py  reconnect.py  resilience.py
security/: .env.example  __init__.py  audit_trail.py  fraud_detection.py  ml_security.py  rate_limiter.py  secret_manager.py  secrets_validator.py
slo/: order-latency.yaml  risk-monitoring.yaml  trading-availability.yaml
specs/: FUTURE_ENHANCEMENTS.md  bookmarks_main.claude.json
strategies/: README.md  __init__.py
tests/: __init__.py  conftest.py  test_adaptive_decay.py  test_bocd.py  test_circuit_breaker.py  test_circuit_breaker_config.py  test_daily_loss_config.py  test_daily_pnl_tracker.py  test_giller_sizing.py  test_gmm_filter.py  test_hawkes_ofi.py  test_hmm_filter.py  test_integrated_sizing.py  test_meta_model.py  test_meta_walk_forward.py  test_mvp_enhancements.py  test_orderflow_manager.py  test_pipeline_integration.py  test_regime_manager.py  test_risk_config.py  test_risk_manager.py  test_tearsheets.py  test_thompson_selector_adaptive.py  test_trade_classifier.py  test_triple_barrier.py  test_vpin.py
trading/: __init__.py  risk_controls.py
(+1131 files in other folders)
