[project]
name = "nautilus-dev"
version = "0.1.0"
description = "NautilusTrader Development Environment"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "nautilus_trader>=1.200.0",
    "ccxt>=4.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "**/templates/*_template.py",
    "**/*_template.py",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
