[project]
name = "nautilus-dev"
version = "0.1.0"
description = "NautilusTrader Development Environment"
requires-python = ">=3.12,<3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-xdist>=3.5.0",           # Parallel test execution
    "pytest-rerunfailures>=14.0",    # Retry flaky tests
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    # Nightly: installed from packages.nautechsystems.io, version varies
    # "nautilus_trader>=1.222.0",  # Commented: use pip install from nightly index
    "ccxt>=4.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "hmmlearn>=0.3.0",
    "apscheduler>=3.10.0",
    "neo4j>=5.0.0",
    "websockets>=12.0",
    "sentry-sdk>=2.0.0",             # Error tracking
    "pre-commit>=4.0.0",             # Pre-commit hooks
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "**/templates/*_template.py",
    "**/*_template.py",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top (sometimes needed for mocking)
    "B017",   # Do not assert blind exception (common in tests)
    "B007",   # Loop control variable not used (intentional in tests)
    "E741",   # Ambiguous variable name (l, I, O)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017", "B007", "F841"]
"docs/*" = ["B006", "B905"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# Parallel execution: -n auto (use all CPUs)
# Retries: --reruns 2 --reruns-delay 1 (retry flaky tests twice)
# Use --dist worksteal for better load balancing
addopts = "-v --tb=short -n auto --dist worksteal --reruns 2 --reruns-delay 1"
# Markers for test categorization
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "flaky: marks tests known to be flaky",
]

[dependency-groups]
dev = [
    "pyarrow>=22.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
