[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccxt-pipeline"
version = "0.1.0"
description = "Multi-exchange data pipeline using CCXT for NautilusTrader"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "ccxt>=4.4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyarrow>=14.0",
    "click>=8.0",
    "apscheduler>=3.10",
    "rich>=13.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
ccxt-cli = "scripts.ccxt_pipeline.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/ccxt_pipeline"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["."]
